// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async action sets up dummy data including userData 1`] = `
Array [
  Object {
    "nameornym": "charlie sheen",
    "publicKey": Array [],
    "secretKey": Array [],
    "type": "UPDATE_USER_DATA",
    "userAvatar": "avatar",
  },
  Object {
    "trustScore": "99.9",
    "type": "USER_TRUST_SCORE",
  },
  Object {
    "groupsCount": 64,
    "type": "GROUPS_COUNT",
  },
  Object {
    "connections": Array [
      Object {
        "avatar": "https://robohash.org/etquosit.jpg?size=145x145&set=set1",
        "connectionDate": "2016-03-20T03:08:33Z",
        "firstName": "Keslie",
        "id": 1,
        "lastName": "Klimko",
        "trustScore": 83.8,
      },
      Object {
        "avatar": "https://robohash.org/autrepellenduscommodi.png?size=145x145&set=set1",
        "connectionDate": "2013-11-17T06:07:44Z",
        "firstName": "Heath",
        "id": 2,
        "lastName": "Miall",
        "trustScore": 89.1,
      },
      Object {
        "avatar": "https://robohash.org/temporesolutaeos.bmp?size=145x145&set=set1",
        "connectionDate": "2008-04-27T14:02:30Z",
        "firstName": "Devin",
        "id": 3,
        "lastName": "Bartomieu",
        "trustScore": 68.3,
      },
      Object {
        "avatar": "https://robohash.org/temporibusetrerum.bmp?size=145x145&set=set1",
        "connectionDate": "2013-02-20T09:27:47Z",
        "firstName": "Olenolin",
        "id": 4,
        "lastName": "Pasquale",
        "trustScore": 91.6,
      },
      Object {
        "avatar": "https://robohash.org/quiquised.bmp?size=145x145&set=set1",
        "connectionDate": "2014-12-14T12:57:34Z",
        "firstName": "Gisele",
        "id": 5,
        "lastName": "Darinton",
        "trustScore": 98.6,
      },
      Object {
        "avatar": "https://robohash.org/nemovelvelit.bmp?size=145x145&set=set1",
        "connectionDate": "2016-08-03T04:58:12Z",
        "firstName": "Crissy",
        "id": 6,
        "lastName": "Zanetto",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/atoptioet.png?size=145x145&set=set1",
        "connectionDate": "2015-06-21T22:32:34Z",
        "firstName": "Gail",
        "id": 7,
        "lastName": "Maddrell",
        "trustScore": 65.3,
      },
      Object {
        "avatar": "https://robohash.org/aliquidveritatisearum.bmp?size=145x145&set=set1",
        "connectionDate": "2014-07-12T11:00:20Z",
        "firstName": "Cindelyn",
        "id": 8,
        "lastName": "Cullin",
        "trustScore": 89.1,
      },
      Object {
        "avatar": "https://robohash.org/cumqueerrormaxime.png?size=145x145&set=set1",
        "connectionDate": "2012-06-28T09:06:27Z",
        "firstName": "Louise",
        "id": 9,
        "lastName": "Brignall",
        "trustScore": 65.4,
      },
      Object {
        "avatar": "https://robohash.org/nobislaboriosamporro.jpg?size=145x145&set=set1",
        "connectionDate": "2013-09-13T08:51:22Z",
        "firstName": "Sybila",
        "id": 10,
        "lastName": "Hathorn",
        "trustScore": 66.7,
      },
      Object {
        "avatar": "https://robohash.org/molestiaeillosunt.bmp?size=145x145&set=set1",
        "connectionDate": "2012-10-30T03:43:25Z",
        "firstName": "Fabien",
        "id": 11,
        "lastName": "Casella",
        "trustScore": 98.9,
      },
      Object {
        "avatar": "https://robohash.org/illumplaceatmolestiae.png?size=145x145&set=set1",
        "connectionDate": "2017-03-30T01:32:07Z",
        "firstName": "Sterling",
        "id": 12,
        "lastName": "Huggon",
        "trustScore": 83.6,
      },
      Object {
        "avatar": "https://robohash.org/velitrepellatvel.jpg?size=145x145&set=set1",
        "connectionDate": "2012-01-19T01:09:52Z",
        "firstName": "Dasya",
        "id": 13,
        "lastName": "Wiffield",
        "trustScore": 75.3,
      },
      Object {
        "avatar": "https://robohash.org/inametfacilis.jpg?size=145x145&set=set1",
        "connectionDate": "2018-04-19T10:21:24Z",
        "firstName": "Barbey",
        "id": 14,
        "lastName": "Greer",
        "trustScore": 63.6,
      },
      Object {
        "avatar": "https://robohash.org/doloreaccusantiumsoluta.bmp?size=145x145&set=set1",
        "connectionDate": "2014-02-15T12:06:22Z",
        "firstName": "Lonny",
        "id": 15,
        "lastName": "Geach",
        "trustScore": 69.7,
      },
      Object {
        "avatar": "https://robohash.org/inciduntvoluptatemtemporibus.jpg?size=145x145&set=set1",
        "connectionDate": "2012-01-27T14:54:10Z",
        "firstName": "Merla",
        "id": 16,
        "lastName": "Milne",
        "trustScore": 82.2,
      },
      Object {
        "avatar": "https://robohash.org/uteveniettenetur.png?size=145x145&set=set1",
        "connectionDate": "2007-10-05T13:56:20Z",
        "firstName": "Kinsley",
        "id": 17,
        "lastName": "Hasluck",
        "trustScore": 72.4,
      },
      Object {
        "avatar": "https://robohash.org/autautemconsequatur.jpg?size=145x145&set=set1",
        "connectionDate": "2014-01-23T10:21:57Z",
        "firstName": "Virgil",
        "id": 18,
        "lastName": "Pyner",
        "trustScore": 70.7,
      },
      Object {
        "avatar": "https://robohash.org/expeditaautdoloremque.jpg?size=145x145&set=set1",
        "connectionDate": "2014-11-09T14:37:20Z",
        "firstName": "Trev",
        "id": 19,
        "lastName": "Heaphy",
        "trustScore": 62.9,
      },
      Object {
        "avatar": "https://robohash.org/alaborumquaerat.png?size=145x145&set=set1",
        "connectionDate": "2009-08-25T22:39:08Z",
        "firstName": "Mercedes",
        "id": 20,
        "lastName": "Boncore",
        "trustScore": 84.7,
      },
      Object {
        "avatar": "https://robohash.org/autemquamcorrupti.jpg?size=145x145&set=set1",
        "connectionDate": "2012-11-26T14:34:49Z",
        "firstName": "Whitney",
        "id": 21,
        "lastName": "Vobes",
        "trustScore": 99,
      },
      Object {
        "avatar": "https://robohash.org/totameterror.jpg?size=145x145&set=set1",
        "connectionDate": "2012-06-27T17:43:53Z",
        "firstName": "Baudoin",
        "id": 22,
        "lastName": "Paolacci",
        "trustScore": 80.1,
      },
      Object {
        "avatar": "https://robohash.org/evenietvelitexpedita.bmp?size=145x145&set=set1",
        "connectionDate": "2015-09-09T05:18:23Z",
        "firstName": "Perceval",
        "id": 23,
        "lastName": "Kaley",
        "trustScore": 95.4,
      },
      Object {
        "avatar": "https://robohash.org/sedseddistinctio.png?size=145x145&set=set1",
        "connectionDate": "2011-04-03T09:15:44Z",
        "firstName": "Claresta",
        "id": 24,
        "lastName": "Seniour",
        "trustScore": 76.5,
      },
      Object {
        "avatar": "https://robohash.org/ipsamofficiisunde.jpg?size=145x145&set=set1",
        "connectionDate": "2012-05-28T01:10:38Z",
        "firstName": "Donelle",
        "id": 25,
        "lastName": "Puddephatt",
        "trustScore": 72.5,
      },
      Object {
        "avatar": "https://robohash.org/quisunteos.png?size=145x145&set=set1",
        "connectionDate": "2016-08-17T09:13:01Z",
        "firstName": "Gussi",
        "id": 26,
        "lastName": "Langelay",
        "trustScore": 91.3,
      },
      Object {
        "avatar": "https://robohash.org/illumsuntofficiis.jpg?size=145x145&set=set1",
        "connectionDate": "2016-07-24T11:53:25Z",
        "firstName": "Wynne",
        "id": 27,
        "lastName": "Autin",
        "trustScore": 86.9,
      },
      Object {
        "avatar": "https://robohash.org/nequeofficiisab.jpg?size=145x145&set=set1",
        "connectionDate": "2010-01-14T13:55:40Z",
        "firstName": "Fredek",
        "id": 28,
        "lastName": "Theml",
        "trustScore": 74.8,
      },
      Object {
        "avatar": "https://robohash.org/liberodoloremquerepudiandae.jpg?size=145x145&set=set1",
        "connectionDate": "2014-06-19T10:24:50Z",
        "firstName": "Dewain",
        "id": 29,
        "lastName": "Clayson",
        "trustScore": 81.8,
      },
      Object {
        "avatar": "https://robohash.org/liberoperspiciatisquas.png?size=145x145&set=set1",
        "connectionDate": "2014-07-29T13:59:38Z",
        "firstName": "Lincoln",
        "id": 30,
        "lastName": "Thornborrow",
        "trustScore": 93.9,
      },
      Object {
        "avatar": "https://robohash.org/utminimaeos.bmp?size=145x145&set=set1",
        "connectionDate": "2014-11-07T16:14:46Z",
        "firstName": "Cordie",
        "id": 31,
        "lastName": "Skalls",
        "trustScore": 96.9,
      },
      Object {
        "avatar": "https://robohash.org/saepetotamodit.png?size=145x145&set=set1",
        "connectionDate": "2017-06-13T20:33:28Z",
        "firstName": "Sibyl",
        "id": 32,
        "lastName": "Berni",
        "trustScore": 78.3,
      },
      Object {
        "avatar": "https://robohash.org/consequunturquasipraesentium.jpg?size=145x145&set=set1",
        "connectionDate": "2013-03-22T08:43:01Z",
        "firstName": "Englebert",
        "id": 33,
        "lastName": "Dyett",
        "trustScore": 85.4,
      },
      Object {
        "avatar": "https://robohash.org/quasautet.bmp?size=145x145&set=set1",
        "connectionDate": "2008-04-28T01:02:53Z",
        "firstName": "Dorolisa",
        "id": 34,
        "lastName": "Spennock",
        "trustScore": 76.4,
      },
      Object {
        "avatar": "https://robohash.org/faciliseligendicumque.png?size=145x145&set=set1",
        "connectionDate": "2008-02-18T03:26:11Z",
        "firstName": "Stace",
        "id": 35,
        "lastName": "Fawlks",
        "trustScore": 64.7,
      },
      Object {
        "avatar": "https://robohash.org/remdoloreligendi.jpg?size=145x145&set=set1",
        "connectionDate": "2010-11-10T21:06:08Z",
        "firstName": "Maggie",
        "id": 36,
        "lastName": "Wanless",
        "trustScore": 85.2,
      },
      Object {
        "avatar": "https://robohash.org/quiacorruptiofficia.png?size=145x145&set=set1",
        "connectionDate": "2013-09-03T06:01:17Z",
        "firstName": "Jelene",
        "id": 37,
        "lastName": "Dackombe",
        "trustScore": 68.9,
      },
      Object {
        "avatar": "https://robohash.org/veroexcepturiquibusdam.jpg?size=145x145&set=set1",
        "connectionDate": "2009-04-08T16:34:07Z",
        "firstName": "Corie",
        "id": 38,
        "lastName": "Igglesden",
        "trustScore": 80.8,
      },
      Object {
        "avatar": "https://robohash.org/repudiandaeconsecteturab.bmp?size=145x145&set=set1",
        "connectionDate": "2009-06-25T17:36:51Z",
        "firstName": "Bettina",
        "id": 39,
        "lastName": "Paolucci",
        "trustScore": 87.5,
      },
      Object {
        "avatar": "https://robohash.org/repellatminimaquis.png?size=145x145&set=set1",
        "connectionDate": "2014-06-23T14:26:47Z",
        "firstName": "Trixy",
        "id": 40,
        "lastName": "Killough",
        "trustScore": 93.1,
      },
      Object {
        "avatar": "https://robohash.org/facilisfugitdeleniti.jpg?size=145x145&set=set1",
        "connectionDate": "2015-07-22T23:30:10Z",
        "firstName": "Meridith",
        "id": 41,
        "lastName": "Heimann",
        "trustScore": 86.8,
      },
      Object {
        "avatar": "https://robohash.org/essesequidolore.jpg?size=145x145&set=set1",
        "connectionDate": "2008-06-12T23:16:09Z",
        "firstName": "Osmond",
        "id": 42,
        "lastName": "Slyde",
        "trustScore": 96.5,
      },
      Object {
        "avatar": "https://robohash.org/consequaturquipariatur.png?size=145x145&set=set1",
        "connectionDate": "2013-06-06T11:16:04Z",
        "firstName": "Yvor",
        "id": 43,
        "lastName": "Masterson",
        "trustScore": 93.4,
      },
      Object {
        "avatar": "https://robohash.org/minimaessemodi.jpg?size=145x145&set=set1",
        "connectionDate": "2015-09-10T01:50:56Z",
        "firstName": "Aurilia",
        "id": 44,
        "lastName": "Cardinale",
        "trustScore": 83.8,
      },
      Object {
        "avatar": "https://robohash.org/idsuntquia.bmp?size=145x145&set=set1",
        "connectionDate": "2010-10-22T15:51:33Z",
        "firstName": "Priscilla",
        "id": 45,
        "lastName": "Reith",
        "trustScore": 71.4,
      },
      Object {
        "avatar": "https://robohash.org/omnisminusaut.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-12T03:54:07Z",
        "firstName": "Marcellina",
        "id": 46,
        "lastName": "Humm",
        "trustScore": 85.8,
      },
      Object {
        "avatar": "https://robohash.org/molestiaesiteveniet.png?size=145x145&set=set1",
        "connectionDate": "2008-11-29T07:41:23Z",
        "firstName": "Chick",
        "id": 47,
        "lastName": "Baudasso",
        "trustScore": 67.5,
      },
      Object {
        "avatar": "https://robohash.org/evenietofficiisdeleniti.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-26T04:01:50Z",
        "firstName": "Prince",
        "id": 48,
        "lastName": "Paske",
        "trustScore": 87.6,
      },
      Object {
        "avatar": "https://robohash.org/quioditexcepturi.jpg?size=145x145&set=set1",
        "connectionDate": "2007-08-11T19:36:30Z",
        "firstName": "Kurtis",
        "id": 49,
        "lastName": "Curley",
        "trustScore": 60.5,
      },
      Object {
        "avatar": "https://robohash.org/odionobiseum.png?size=145x145&set=set1",
        "connectionDate": "2015-03-29T08:51:33Z",
        "firstName": "Nertie",
        "id": 50,
        "lastName": "Cesconi",
        "trustScore": 77.7,
      },
      Object {
        "avatar": "https://robohash.org/dolorestemporibusreiciendis.png?size=145x145&set=set1",
        "connectionDate": "2009-09-26T15:04:02Z",
        "firstName": "Saunderson",
        "id": 51,
        "lastName": "Rapper",
        "trustScore": 94,
      },
      Object {
        "avatar": "https://robohash.org/accusantiumquisquamquae.jpg?size=145x145&set=set1",
        "connectionDate": "2011-06-13T17:24:40Z",
        "firstName": "Sonny",
        "id": 52,
        "lastName": "Ivens",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/nobisrationetotam.png?size=145x145&set=set1",
        "connectionDate": "2017-08-01T14:41:37Z",
        "firstName": "Tabb",
        "id": 53,
        "lastName": "Oag",
        "trustScore": 60.1,
      },
      Object {
        "avatar": "https://robohash.org/quiatexercitationem.jpg?size=145x145&set=set1",
        "connectionDate": "2011-06-15T03:13:15Z",
        "firstName": "Celinka",
        "id": 54,
        "lastName": "Bastiman",
        "trustScore": 84.3,
      },
      Object {
        "avatar": "https://robohash.org/eosinplaceat.png?size=145x145&set=set1",
        "connectionDate": "2008-01-08T12:23:14Z",
        "firstName": "Cameron",
        "id": 55,
        "lastName": "Lovat",
        "trustScore": 83.4,
      },
      Object {
        "avatar": "https://robohash.org/etadipiscinatus.png?size=145x145&set=set1",
        "connectionDate": "2012-10-15T08:09:53Z",
        "firstName": "Nickie",
        "id": 56,
        "lastName": "Roblett",
        "trustScore": 78,
      },
      Object {
        "avatar": "https://robohash.org/quietin.bmp?size=145x145&set=set1",
        "connectionDate": "2009-07-29T16:00:12Z",
        "firstName": "Dehlia",
        "id": 57,
        "lastName": "Cleeton",
        "trustScore": 87.4,
      },
      Object {
        "avatar": "https://robohash.org/numquamnamconsequatur.png?size=145x145&set=set1",
        "connectionDate": "2011-10-13T13:27:51Z",
        "firstName": "Worden",
        "id": 58,
        "lastName": "Ullyatt",
        "trustScore": 89.5,
      },
      Object {
        "avatar": "https://robohash.org/repellendusveritatisab.bmp?size=145x145&set=set1",
        "connectionDate": "2014-06-07T18:18:03Z",
        "firstName": "Viviana",
        "id": 59,
        "lastName": "Managh",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/maioresdignissimosfacilis.bmp?size=145x145&set=set1",
        "connectionDate": "2011-01-11T16:59:25Z",
        "firstName": "Grange",
        "id": 60,
        "lastName": "Ossenna",
        "trustScore": 63,
      },
      Object {
        "avatar": "https://robohash.org/veritatisperspiciatisautem.bmp?size=145x145&set=set1",
        "connectionDate": "2015-12-09T15:28:22Z",
        "firstName": "Galen",
        "id": 61,
        "lastName": "Eagleton",
        "trustScore": 62.2,
      },
      Object {
        "avatar": "https://robohash.org/numquamnonet.bmp?size=145x145&set=set1",
        "connectionDate": "2016-07-27T00:11:34Z",
        "firstName": "Nancey",
        "id": 62,
        "lastName": "Mansfield",
        "trustScore": 90.9,
      },
      Object {
        "avatar": "https://robohash.org/quivoluptasullam.jpg?size=145x145&set=set1",
        "connectionDate": "2014-10-03T02:29:53Z",
        "firstName": "Gaspar",
        "id": 63,
        "lastName": "Duckhouse",
        "trustScore": 63.6,
      },
      Object {
        "avatar": "https://robohash.org/velitquiin.bmp?size=145x145&set=set1",
        "connectionDate": "2012-02-01T20:21:43Z",
        "firstName": "Fairlie",
        "id": 64,
        "lastName": "Rickerby",
        "trustScore": 73.4,
      },
      Object {
        "avatar": "https://robohash.org/repudiandaeporromaiores.jpg?size=145x145&set=set1",
        "connectionDate": "2016-08-23T01:50:27Z",
        "firstName": "Jyoti",
        "id": 65,
        "lastName": "Yong",
        "trustScore": 85.8,
      },
      Object {
        "avatar": "https://robohash.org/nihiletsoluta.png?size=145x145&set=set1",
        "connectionDate": "2009-03-22T16:53:24Z",
        "firstName": "Mano",
        "id": 66,
        "lastName": "O'Loughane",
        "trustScore": 93.7,
      },
      Object {
        "avatar": "https://robohash.org/quiaaperiamut.jpg?size=145x145&set=set1",
        "connectionDate": "2008-03-09T07:57:42Z",
        "firstName": "Riva",
        "id": 67,
        "lastName": "Nazer",
        "trustScore": 76.8,
      },
      Object {
        "avatar": "https://robohash.org/maximeexpeditaquia.jpg?size=145x145&set=set1",
        "connectionDate": "2016-01-26T05:08:13Z",
        "firstName": "Cecelia",
        "id": 68,
        "lastName": "Sames",
        "trustScore": 93.5,
      },
      Object {
        "avatar": "https://robohash.org/distinctioutaut.jpg?size=145x145&set=set1",
        "connectionDate": "2008-12-01T12:29:37Z",
        "firstName": "Hakeem",
        "id": 69,
        "lastName": "Payley",
        "trustScore": 62.5,
      },
      Object {
        "avatar": "https://robohash.org/culpanecessitatibuseum.jpg?size=145x145&set=set1",
        "connectionDate": "2012-09-27T08:36:36Z",
        "firstName": "Sollie",
        "id": 70,
        "lastName": "Scohier",
        "trustScore": 97.4,
      },
      Object {
        "avatar": "https://robohash.org/involuptatemid.jpg?size=145x145&set=set1",
        "connectionDate": "2016-12-12T10:33:19Z",
        "firstName": "Leta",
        "id": 71,
        "lastName": "Driutti",
        "trustScore": 87.7,
      },
      Object {
        "avatar": "https://robohash.org/eosmollitiaenim.jpg?size=145x145&set=set1",
        "connectionDate": "2018-01-04T12:29:24Z",
        "firstName": "Harper",
        "id": 72,
        "lastName": "Minot",
        "trustScore": 85.4,
      },
      Object {
        "avatar": "https://robohash.org/rationeestnon.jpg?size=145x145&set=set1",
        "connectionDate": "2010-02-19T20:45:04Z",
        "firstName": "Alix",
        "id": 73,
        "lastName": "Borrie",
        "trustScore": 67,
      },
      Object {
        "avatar": "https://robohash.org/aliasveritatisqui.jpg?size=145x145&set=set1",
        "connectionDate": "2008-04-05T03:17:59Z",
        "firstName": "Chrysa",
        "id": 74,
        "lastName": "Itscowics",
        "trustScore": 72.4,
      },
      Object {
        "avatar": "https://robohash.org/autetasperiores.jpg?size=145x145&set=set1",
        "connectionDate": "2015-02-05T10:18:58Z",
        "firstName": "Ezmeralda",
        "id": 75,
        "lastName": "Ianilli",
        "trustScore": 86.9,
      },
      Object {
        "avatar": "https://robohash.org/nihilmaximemagni.bmp?size=145x145&set=set1",
        "connectionDate": "2015-07-31T18:08:51Z",
        "firstName": "Rina",
        "id": 76,
        "lastName": "MacRury",
        "trustScore": 73.7,
      },
      Object {
        "avatar": "https://robohash.org/quisapientequia.jpg?size=145x145&set=set1",
        "connectionDate": "2008-12-03T01:50:24Z",
        "firstName": "Cacilia",
        "id": 77,
        "lastName": "Ordelt",
        "trustScore": 86.3,
      },
      Object {
        "avatar": "https://robohash.org/voluptatemetaut.bmp?size=145x145&set=set1",
        "connectionDate": "2016-03-04T15:14:08Z",
        "firstName": "Tybalt",
        "id": 78,
        "lastName": "Mair",
        "trustScore": 87.2,
      },
      Object {
        "avatar": "https://robohash.org/adquidemcorrupti.jpg?size=145x145&set=set1",
        "connectionDate": "2015-01-18T13:10:59Z",
        "firstName": "Ruprecht",
        "id": 79,
        "lastName": "Shaxby",
        "trustScore": 74.3,
      },
      Object {
        "avatar": "https://robohash.org/nemoconsequaturest.jpg?size=145x145&set=set1",
        "connectionDate": "2009-11-03T15:11:49Z",
        "firstName": "Hailey",
        "id": 80,
        "lastName": "Fallowfield",
        "trustScore": 90.1,
      },
      Object {
        "avatar": "https://robohash.org/autvoluptasmollitia.jpg?size=145x145&set=set1",
        "connectionDate": "2017-07-17T16:58:28Z",
        "firstName": "Mufi",
        "id": 81,
        "lastName": "McCandie",
        "trustScore": 89.6,
      },
      Object {
        "avatar": "https://robohash.org/corporissintaut.png?size=145x145&set=set1",
        "connectionDate": "2007-11-27T10:00:01Z",
        "firstName": "Tammie",
        "id": 82,
        "lastName": "Dunstone",
        "trustScore": 76.9,
      },
      Object {
        "avatar": "https://robohash.org/fugitquicorporis.bmp?size=145x145&set=set1",
        "connectionDate": "2015-02-24T14:05:41Z",
        "firstName": "Stern",
        "id": 83,
        "lastName": "Rees",
        "trustScore": 81.4,
      },
      Object {
        "avatar": "https://robohash.org/idametiste.png?size=145x145&set=set1",
        "connectionDate": "2011-03-01T16:44:34Z",
        "firstName": "Ilario",
        "id": 84,
        "lastName": "Spon",
        "trustScore": 62.1,
      },
      Object {
        "avatar": "https://robohash.org/sitquiased.png?size=145x145&set=set1",
        "connectionDate": "2017-02-27T14:12:08Z",
        "firstName": "Ivar",
        "id": 85,
        "lastName": "Phlipon",
        "trustScore": 71.5,
      },
      Object {
        "avatar": "https://robohash.org/aliquidsaepecommodi.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-15T23:59:03Z",
        "firstName": "Jaclyn",
        "id": 86,
        "lastName": "Kelcher",
        "trustScore": 72.9,
      },
      Object {
        "avatar": "https://robohash.org/voluptatemvoluptatessimilique.bmp?size=145x145&set=set1",
        "connectionDate": "2010-11-14T17:35:33Z",
        "firstName": "Thorvald",
        "id": 87,
        "lastName": "Rebillard",
        "trustScore": 66.5,
      },
      Object {
        "avatar": "https://robohash.org/eumvelitbeatae.png?size=145x145&set=set1",
        "connectionDate": "2016-12-25T08:46:38Z",
        "firstName": "Ara",
        "id": 88,
        "lastName": "Buchanan",
        "trustScore": 66.7,
      },
      Object {
        "avatar": "https://robohash.org/omnisvoluptatemiusto.png?size=145x145&set=set1",
        "connectionDate": "2008-12-13T01:28:00Z",
        "firstName": "Charo",
        "id": 89,
        "lastName": "Kingston",
        "trustScore": 90.9,
      },
      Object {
        "avatar": "https://robohash.org/fugitmagnamnisi.png?size=145x145&set=set1",
        "connectionDate": "2011-01-01T16:50:12Z",
        "firstName": "Niel",
        "id": 90,
        "lastName": "Dulinty",
        "trustScore": 98.1,
      },
      Object {
        "avatar": "https://robohash.org/veniamidautem.png?size=145x145&set=set1",
        "connectionDate": "2017-08-06T11:03:12Z",
        "firstName": "Carlee",
        "id": 91,
        "lastName": "Van der Merwe",
        "trustScore": 60.4,
      },
      Object {
        "avatar": "https://robohash.org/sintdoloresculpa.bmp?size=145x145&set=set1",
        "connectionDate": "2017-03-17T16:24:58Z",
        "firstName": "Eloise",
        "id": 92,
        "lastName": "Noriega",
        "trustScore": 76.9,
      },
      Object {
        "avatar": "https://robohash.org/liberoducimusab.bmp?size=145x145&set=set1",
        "connectionDate": "2012-04-07T09:01:40Z",
        "firstName": "Fabien",
        "id": 93,
        "lastName": "Harron",
        "trustScore": 71,
      },
      Object {
        "avatar": "https://robohash.org/totamlaborummolestias.bmp?size=145x145&set=set1",
        "connectionDate": "2008-05-04T02:26:43Z",
        "firstName": "Denny",
        "id": 94,
        "lastName": "Furmedge",
        "trustScore": 91.6,
      },
      Object {
        "avatar": "https://robohash.org/aperiametadipisci.bmp?size=145x145&set=set1",
        "connectionDate": "2009-06-15T06:56:13Z",
        "firstName": "Jessey",
        "id": 95,
        "lastName": "Maciejak",
        "trustScore": 65.2,
      },
      Object {
        "avatar": "https://robohash.org/cupiditateeosblanditiis.bmp?size=145x145&set=set1",
        "connectionDate": "2012-05-27T02:57:28Z",
        "firstName": "Shannon",
        "id": 96,
        "lastName": "Daal",
        "trustScore": 94.2,
      },
      Object {
        "avatar": "https://robohash.org/nequevelperspiciatis.png?size=145x145&set=set1",
        "connectionDate": "2014-05-17T15:16:55Z",
        "firstName": "Tina",
        "id": 97,
        "lastName": "Jarmyn",
        "trustScore": 87.5,
      },
      Object {
        "avatar": "https://robohash.org/quisautsint.png?size=145x145&set=set1",
        "connectionDate": "2007-07-04T21:40:27Z",
        "firstName": "Jamesy",
        "id": 98,
        "lastName": "Brear",
        "trustScore": 66.9,
      },
      Object {
        "avatar": "https://robohash.org/asperioresculpaqui.bmp?size=145x145&set=set1",
        "connectionDate": "2010-05-05T18:54:46Z",
        "firstName": "Kristina",
        "id": 99,
        "lastName": "Sabben",
        "trustScore": 68.2,
      },
      Object {
        "avatar": "https://robohash.org/suscipitdistinctioperspiciatis.bmp?size=145x145&set=set1",
        "connectionDate": "2012-03-31T07:44:21Z",
        "firstName": "Cirilo",
        "id": 100,
        "lastName": "O'Towey",
        "trustScore": 93.9,
      },
    ],
    "type": "UPDATE_CONNECTIONS",
  },
]
`;

exports[`async action sets up dummy data without userData 1`] = `
Array [
  Object {
    "trustScore": "99.9",
    "type": "USER_TRUST_SCORE",
  },
  Object {
    "groupsCount": 64,
    "type": "GROUPS_COUNT",
  },
  Object {
    "connections": Array [
      Object {
        "avatar": "https://robohash.org/etquosit.jpg?size=145x145&set=set1",
        "connectionDate": "2016-03-20T03:08:33Z",
        "firstName": "Keslie",
        "id": 1,
        "lastName": "Klimko",
        "trustScore": 83.8,
      },
      Object {
        "avatar": "https://robohash.org/autrepellenduscommodi.png?size=145x145&set=set1",
        "connectionDate": "2013-11-17T06:07:44Z",
        "firstName": "Heath",
        "id": 2,
        "lastName": "Miall",
        "trustScore": 89.1,
      },
      Object {
        "avatar": "https://robohash.org/temporesolutaeos.bmp?size=145x145&set=set1",
        "connectionDate": "2008-04-27T14:02:30Z",
        "firstName": "Devin",
        "id": 3,
        "lastName": "Bartomieu",
        "trustScore": 68.3,
      },
      Object {
        "avatar": "https://robohash.org/temporibusetrerum.bmp?size=145x145&set=set1",
        "connectionDate": "2013-02-20T09:27:47Z",
        "firstName": "Olenolin",
        "id": 4,
        "lastName": "Pasquale",
        "trustScore": 91.6,
      },
      Object {
        "avatar": "https://robohash.org/quiquised.bmp?size=145x145&set=set1",
        "connectionDate": "2014-12-14T12:57:34Z",
        "firstName": "Gisele",
        "id": 5,
        "lastName": "Darinton",
        "trustScore": 98.6,
      },
      Object {
        "avatar": "https://robohash.org/nemovelvelit.bmp?size=145x145&set=set1",
        "connectionDate": "2016-08-03T04:58:12Z",
        "firstName": "Crissy",
        "id": 6,
        "lastName": "Zanetto",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/atoptioet.png?size=145x145&set=set1",
        "connectionDate": "2015-06-21T22:32:34Z",
        "firstName": "Gail",
        "id": 7,
        "lastName": "Maddrell",
        "trustScore": 65.3,
      },
      Object {
        "avatar": "https://robohash.org/aliquidveritatisearum.bmp?size=145x145&set=set1",
        "connectionDate": "2014-07-12T11:00:20Z",
        "firstName": "Cindelyn",
        "id": 8,
        "lastName": "Cullin",
        "trustScore": 89.1,
      },
      Object {
        "avatar": "https://robohash.org/cumqueerrormaxime.png?size=145x145&set=set1",
        "connectionDate": "2012-06-28T09:06:27Z",
        "firstName": "Louise",
        "id": 9,
        "lastName": "Brignall",
        "trustScore": 65.4,
      },
      Object {
        "avatar": "https://robohash.org/nobislaboriosamporro.jpg?size=145x145&set=set1",
        "connectionDate": "2013-09-13T08:51:22Z",
        "firstName": "Sybila",
        "id": 10,
        "lastName": "Hathorn",
        "trustScore": 66.7,
      },
      Object {
        "avatar": "https://robohash.org/molestiaeillosunt.bmp?size=145x145&set=set1",
        "connectionDate": "2012-10-30T03:43:25Z",
        "firstName": "Fabien",
        "id": 11,
        "lastName": "Casella",
        "trustScore": 98.9,
      },
      Object {
        "avatar": "https://robohash.org/illumplaceatmolestiae.png?size=145x145&set=set1",
        "connectionDate": "2017-03-30T01:32:07Z",
        "firstName": "Sterling",
        "id": 12,
        "lastName": "Huggon",
        "trustScore": 83.6,
      },
      Object {
        "avatar": "https://robohash.org/velitrepellatvel.jpg?size=145x145&set=set1",
        "connectionDate": "2012-01-19T01:09:52Z",
        "firstName": "Dasya",
        "id": 13,
        "lastName": "Wiffield",
        "trustScore": 75.3,
      },
      Object {
        "avatar": "https://robohash.org/inametfacilis.jpg?size=145x145&set=set1",
        "connectionDate": "2018-04-19T10:21:24Z",
        "firstName": "Barbey",
        "id": 14,
        "lastName": "Greer",
        "trustScore": 63.6,
      },
      Object {
        "avatar": "https://robohash.org/doloreaccusantiumsoluta.bmp?size=145x145&set=set1",
        "connectionDate": "2014-02-15T12:06:22Z",
        "firstName": "Lonny",
        "id": 15,
        "lastName": "Geach",
        "trustScore": 69.7,
      },
      Object {
        "avatar": "https://robohash.org/inciduntvoluptatemtemporibus.jpg?size=145x145&set=set1",
        "connectionDate": "2012-01-27T14:54:10Z",
        "firstName": "Merla",
        "id": 16,
        "lastName": "Milne",
        "trustScore": 82.2,
      },
      Object {
        "avatar": "https://robohash.org/uteveniettenetur.png?size=145x145&set=set1",
        "connectionDate": "2007-10-05T13:56:20Z",
        "firstName": "Kinsley",
        "id": 17,
        "lastName": "Hasluck",
        "trustScore": 72.4,
      },
      Object {
        "avatar": "https://robohash.org/autautemconsequatur.jpg?size=145x145&set=set1",
        "connectionDate": "2014-01-23T10:21:57Z",
        "firstName": "Virgil",
        "id": 18,
        "lastName": "Pyner",
        "trustScore": 70.7,
      },
      Object {
        "avatar": "https://robohash.org/expeditaautdoloremque.jpg?size=145x145&set=set1",
        "connectionDate": "2014-11-09T14:37:20Z",
        "firstName": "Trev",
        "id": 19,
        "lastName": "Heaphy",
        "trustScore": 62.9,
      },
      Object {
        "avatar": "https://robohash.org/alaborumquaerat.png?size=145x145&set=set1",
        "connectionDate": "2009-08-25T22:39:08Z",
        "firstName": "Mercedes",
        "id": 20,
        "lastName": "Boncore",
        "trustScore": 84.7,
      },
      Object {
        "avatar": "https://robohash.org/autemquamcorrupti.jpg?size=145x145&set=set1",
        "connectionDate": "2012-11-26T14:34:49Z",
        "firstName": "Whitney",
        "id": 21,
        "lastName": "Vobes",
        "trustScore": 99,
      },
      Object {
        "avatar": "https://robohash.org/totameterror.jpg?size=145x145&set=set1",
        "connectionDate": "2012-06-27T17:43:53Z",
        "firstName": "Baudoin",
        "id": 22,
        "lastName": "Paolacci",
        "trustScore": 80.1,
      },
      Object {
        "avatar": "https://robohash.org/evenietvelitexpedita.bmp?size=145x145&set=set1",
        "connectionDate": "2015-09-09T05:18:23Z",
        "firstName": "Perceval",
        "id": 23,
        "lastName": "Kaley",
        "trustScore": 95.4,
      },
      Object {
        "avatar": "https://robohash.org/sedseddistinctio.png?size=145x145&set=set1",
        "connectionDate": "2011-04-03T09:15:44Z",
        "firstName": "Claresta",
        "id": 24,
        "lastName": "Seniour",
        "trustScore": 76.5,
      },
      Object {
        "avatar": "https://robohash.org/ipsamofficiisunde.jpg?size=145x145&set=set1",
        "connectionDate": "2012-05-28T01:10:38Z",
        "firstName": "Donelle",
        "id": 25,
        "lastName": "Puddephatt",
        "trustScore": 72.5,
      },
      Object {
        "avatar": "https://robohash.org/quisunteos.png?size=145x145&set=set1",
        "connectionDate": "2016-08-17T09:13:01Z",
        "firstName": "Gussi",
        "id": 26,
        "lastName": "Langelay",
        "trustScore": 91.3,
      },
      Object {
        "avatar": "https://robohash.org/illumsuntofficiis.jpg?size=145x145&set=set1",
        "connectionDate": "2016-07-24T11:53:25Z",
        "firstName": "Wynne",
        "id": 27,
        "lastName": "Autin",
        "trustScore": 86.9,
      },
      Object {
        "avatar": "https://robohash.org/nequeofficiisab.jpg?size=145x145&set=set1",
        "connectionDate": "2010-01-14T13:55:40Z",
        "firstName": "Fredek",
        "id": 28,
        "lastName": "Theml",
        "trustScore": 74.8,
      },
      Object {
        "avatar": "https://robohash.org/liberodoloremquerepudiandae.jpg?size=145x145&set=set1",
        "connectionDate": "2014-06-19T10:24:50Z",
        "firstName": "Dewain",
        "id": 29,
        "lastName": "Clayson",
        "trustScore": 81.8,
      },
      Object {
        "avatar": "https://robohash.org/liberoperspiciatisquas.png?size=145x145&set=set1",
        "connectionDate": "2014-07-29T13:59:38Z",
        "firstName": "Lincoln",
        "id": 30,
        "lastName": "Thornborrow",
        "trustScore": 93.9,
      },
      Object {
        "avatar": "https://robohash.org/utminimaeos.bmp?size=145x145&set=set1",
        "connectionDate": "2014-11-07T16:14:46Z",
        "firstName": "Cordie",
        "id": 31,
        "lastName": "Skalls",
        "trustScore": 96.9,
      },
      Object {
        "avatar": "https://robohash.org/saepetotamodit.png?size=145x145&set=set1",
        "connectionDate": "2017-06-13T20:33:28Z",
        "firstName": "Sibyl",
        "id": 32,
        "lastName": "Berni",
        "trustScore": 78.3,
      },
      Object {
        "avatar": "https://robohash.org/consequunturquasipraesentium.jpg?size=145x145&set=set1",
        "connectionDate": "2013-03-22T08:43:01Z",
        "firstName": "Englebert",
        "id": 33,
        "lastName": "Dyett",
        "trustScore": 85.4,
      },
      Object {
        "avatar": "https://robohash.org/quasautet.bmp?size=145x145&set=set1",
        "connectionDate": "2008-04-28T01:02:53Z",
        "firstName": "Dorolisa",
        "id": 34,
        "lastName": "Spennock",
        "trustScore": 76.4,
      },
      Object {
        "avatar": "https://robohash.org/faciliseligendicumque.png?size=145x145&set=set1",
        "connectionDate": "2008-02-18T03:26:11Z",
        "firstName": "Stace",
        "id": 35,
        "lastName": "Fawlks",
        "trustScore": 64.7,
      },
      Object {
        "avatar": "https://robohash.org/remdoloreligendi.jpg?size=145x145&set=set1",
        "connectionDate": "2010-11-10T21:06:08Z",
        "firstName": "Maggie",
        "id": 36,
        "lastName": "Wanless",
        "trustScore": 85.2,
      },
      Object {
        "avatar": "https://robohash.org/quiacorruptiofficia.png?size=145x145&set=set1",
        "connectionDate": "2013-09-03T06:01:17Z",
        "firstName": "Jelene",
        "id": 37,
        "lastName": "Dackombe",
        "trustScore": 68.9,
      },
      Object {
        "avatar": "https://robohash.org/veroexcepturiquibusdam.jpg?size=145x145&set=set1",
        "connectionDate": "2009-04-08T16:34:07Z",
        "firstName": "Corie",
        "id": 38,
        "lastName": "Igglesden",
        "trustScore": 80.8,
      },
      Object {
        "avatar": "https://robohash.org/repudiandaeconsecteturab.bmp?size=145x145&set=set1",
        "connectionDate": "2009-06-25T17:36:51Z",
        "firstName": "Bettina",
        "id": 39,
        "lastName": "Paolucci",
        "trustScore": 87.5,
      },
      Object {
        "avatar": "https://robohash.org/repellatminimaquis.png?size=145x145&set=set1",
        "connectionDate": "2014-06-23T14:26:47Z",
        "firstName": "Trixy",
        "id": 40,
        "lastName": "Killough",
        "trustScore": 93.1,
      },
      Object {
        "avatar": "https://robohash.org/facilisfugitdeleniti.jpg?size=145x145&set=set1",
        "connectionDate": "2015-07-22T23:30:10Z",
        "firstName": "Meridith",
        "id": 41,
        "lastName": "Heimann",
        "trustScore": 86.8,
      },
      Object {
        "avatar": "https://robohash.org/essesequidolore.jpg?size=145x145&set=set1",
        "connectionDate": "2008-06-12T23:16:09Z",
        "firstName": "Osmond",
        "id": 42,
        "lastName": "Slyde",
        "trustScore": 96.5,
      },
      Object {
        "avatar": "https://robohash.org/consequaturquipariatur.png?size=145x145&set=set1",
        "connectionDate": "2013-06-06T11:16:04Z",
        "firstName": "Yvor",
        "id": 43,
        "lastName": "Masterson",
        "trustScore": 93.4,
      },
      Object {
        "avatar": "https://robohash.org/minimaessemodi.jpg?size=145x145&set=set1",
        "connectionDate": "2015-09-10T01:50:56Z",
        "firstName": "Aurilia",
        "id": 44,
        "lastName": "Cardinale",
        "trustScore": 83.8,
      },
      Object {
        "avatar": "https://robohash.org/idsuntquia.bmp?size=145x145&set=set1",
        "connectionDate": "2010-10-22T15:51:33Z",
        "firstName": "Priscilla",
        "id": 45,
        "lastName": "Reith",
        "trustScore": 71.4,
      },
      Object {
        "avatar": "https://robohash.org/omnisminusaut.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-12T03:54:07Z",
        "firstName": "Marcellina",
        "id": 46,
        "lastName": "Humm",
        "trustScore": 85.8,
      },
      Object {
        "avatar": "https://robohash.org/molestiaesiteveniet.png?size=145x145&set=set1",
        "connectionDate": "2008-11-29T07:41:23Z",
        "firstName": "Chick",
        "id": 47,
        "lastName": "Baudasso",
        "trustScore": 67.5,
      },
      Object {
        "avatar": "https://robohash.org/evenietofficiisdeleniti.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-26T04:01:50Z",
        "firstName": "Prince",
        "id": 48,
        "lastName": "Paske",
        "trustScore": 87.6,
      },
      Object {
        "avatar": "https://robohash.org/quioditexcepturi.jpg?size=145x145&set=set1",
        "connectionDate": "2007-08-11T19:36:30Z",
        "firstName": "Kurtis",
        "id": 49,
        "lastName": "Curley",
        "trustScore": 60.5,
      },
      Object {
        "avatar": "https://robohash.org/odionobiseum.png?size=145x145&set=set1",
        "connectionDate": "2015-03-29T08:51:33Z",
        "firstName": "Nertie",
        "id": 50,
        "lastName": "Cesconi",
        "trustScore": 77.7,
      },
      Object {
        "avatar": "https://robohash.org/dolorestemporibusreiciendis.png?size=145x145&set=set1",
        "connectionDate": "2009-09-26T15:04:02Z",
        "firstName": "Saunderson",
        "id": 51,
        "lastName": "Rapper",
        "trustScore": 94,
      },
      Object {
        "avatar": "https://robohash.org/accusantiumquisquamquae.jpg?size=145x145&set=set1",
        "connectionDate": "2011-06-13T17:24:40Z",
        "firstName": "Sonny",
        "id": 52,
        "lastName": "Ivens",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/nobisrationetotam.png?size=145x145&set=set1",
        "connectionDate": "2017-08-01T14:41:37Z",
        "firstName": "Tabb",
        "id": 53,
        "lastName": "Oag",
        "trustScore": 60.1,
      },
      Object {
        "avatar": "https://robohash.org/quiatexercitationem.jpg?size=145x145&set=set1",
        "connectionDate": "2011-06-15T03:13:15Z",
        "firstName": "Celinka",
        "id": 54,
        "lastName": "Bastiman",
        "trustScore": 84.3,
      },
      Object {
        "avatar": "https://robohash.org/eosinplaceat.png?size=145x145&set=set1",
        "connectionDate": "2008-01-08T12:23:14Z",
        "firstName": "Cameron",
        "id": 55,
        "lastName": "Lovat",
        "trustScore": 83.4,
      },
      Object {
        "avatar": "https://robohash.org/etadipiscinatus.png?size=145x145&set=set1",
        "connectionDate": "2012-10-15T08:09:53Z",
        "firstName": "Nickie",
        "id": 56,
        "lastName": "Roblett",
        "trustScore": 78,
      },
      Object {
        "avatar": "https://robohash.org/quietin.bmp?size=145x145&set=set1",
        "connectionDate": "2009-07-29T16:00:12Z",
        "firstName": "Dehlia",
        "id": 57,
        "lastName": "Cleeton",
        "trustScore": 87.4,
      },
      Object {
        "avatar": "https://robohash.org/numquamnamconsequatur.png?size=145x145&set=set1",
        "connectionDate": "2011-10-13T13:27:51Z",
        "firstName": "Worden",
        "id": 58,
        "lastName": "Ullyatt",
        "trustScore": 89.5,
      },
      Object {
        "avatar": "https://robohash.org/repellendusveritatisab.bmp?size=145x145&set=set1",
        "connectionDate": "2014-06-07T18:18:03Z",
        "firstName": "Viviana",
        "id": 59,
        "lastName": "Managh",
        "trustScore": 86,
      },
      Object {
        "avatar": "https://robohash.org/maioresdignissimosfacilis.bmp?size=145x145&set=set1",
        "connectionDate": "2011-01-11T16:59:25Z",
        "firstName": "Grange",
        "id": 60,
        "lastName": "Ossenna",
        "trustScore": 63,
      },
      Object {
        "avatar": "https://robohash.org/veritatisperspiciatisautem.bmp?size=145x145&set=set1",
        "connectionDate": "2015-12-09T15:28:22Z",
        "firstName": "Galen",
        "id": 61,
        "lastName": "Eagleton",
        "trustScore": 62.2,
      },
      Object {
        "avatar": "https://robohash.org/numquamnonet.bmp?size=145x145&set=set1",
        "connectionDate": "2016-07-27T00:11:34Z",
        "firstName": "Nancey",
        "id": 62,
        "lastName": "Mansfield",
        "trustScore": 90.9,
      },
      Object {
        "avatar": "https://robohash.org/quivoluptasullam.jpg?size=145x145&set=set1",
        "connectionDate": "2014-10-03T02:29:53Z",
        "firstName": "Gaspar",
        "id": 63,
        "lastName": "Duckhouse",
        "trustScore": 63.6,
      },
      Object {
        "avatar": "https://robohash.org/velitquiin.bmp?size=145x145&set=set1",
        "connectionDate": "2012-02-01T20:21:43Z",
        "firstName": "Fairlie",
        "id": 64,
        "lastName": "Rickerby",
        "trustScore": 73.4,
      },
      Object {
        "avatar": "https://robohash.org/repudiandaeporromaiores.jpg?size=145x145&set=set1",
        "connectionDate": "2016-08-23T01:50:27Z",
        "firstName": "Jyoti",
        "id": 65,
        "lastName": "Yong",
        "trustScore": 85.8,
      },
      Object {
        "avatar": "https://robohash.org/nihiletsoluta.png?size=145x145&set=set1",
        "connectionDate": "2009-03-22T16:53:24Z",
        "firstName": "Mano",
        "id": 66,
        "lastName": "O'Loughane",
        "trustScore": 93.7,
      },
      Object {
        "avatar": "https://robohash.org/quiaaperiamut.jpg?size=145x145&set=set1",
        "connectionDate": "2008-03-09T07:57:42Z",
        "firstName": "Riva",
        "id": 67,
        "lastName": "Nazer",
        "trustScore": 76.8,
      },
      Object {
        "avatar": "https://robohash.org/maximeexpeditaquia.jpg?size=145x145&set=set1",
        "connectionDate": "2016-01-26T05:08:13Z",
        "firstName": "Cecelia",
        "id": 68,
        "lastName": "Sames",
        "trustScore": 93.5,
      },
      Object {
        "avatar": "https://robohash.org/distinctioutaut.jpg?size=145x145&set=set1",
        "connectionDate": "2008-12-01T12:29:37Z",
        "firstName": "Hakeem",
        "id": 69,
        "lastName": "Payley",
        "trustScore": 62.5,
      },
      Object {
        "avatar": "https://robohash.org/culpanecessitatibuseum.jpg?size=145x145&set=set1",
        "connectionDate": "2012-09-27T08:36:36Z",
        "firstName": "Sollie",
        "id": 70,
        "lastName": "Scohier",
        "trustScore": 97.4,
      },
      Object {
        "avatar": "https://robohash.org/involuptatemid.jpg?size=145x145&set=set1",
        "connectionDate": "2016-12-12T10:33:19Z",
        "firstName": "Leta",
        "id": 71,
        "lastName": "Driutti",
        "trustScore": 87.7,
      },
      Object {
        "avatar": "https://robohash.org/eosmollitiaenim.jpg?size=145x145&set=set1",
        "connectionDate": "2018-01-04T12:29:24Z",
        "firstName": "Harper",
        "id": 72,
        "lastName": "Minot",
        "trustScore": 85.4,
      },
      Object {
        "avatar": "https://robohash.org/rationeestnon.jpg?size=145x145&set=set1",
        "connectionDate": "2010-02-19T20:45:04Z",
        "firstName": "Alix",
        "id": 73,
        "lastName": "Borrie",
        "trustScore": 67,
      },
      Object {
        "avatar": "https://robohash.org/aliasveritatisqui.jpg?size=145x145&set=set1",
        "connectionDate": "2008-04-05T03:17:59Z",
        "firstName": "Chrysa",
        "id": 74,
        "lastName": "Itscowics",
        "trustScore": 72.4,
      },
      Object {
        "avatar": "https://robohash.org/autetasperiores.jpg?size=145x145&set=set1",
        "connectionDate": "2015-02-05T10:18:58Z",
        "firstName": "Ezmeralda",
        "id": 75,
        "lastName": "Ianilli",
        "trustScore": 86.9,
      },
      Object {
        "avatar": "https://robohash.org/nihilmaximemagni.bmp?size=145x145&set=set1",
        "connectionDate": "2015-07-31T18:08:51Z",
        "firstName": "Rina",
        "id": 76,
        "lastName": "MacRury",
        "trustScore": 73.7,
      },
      Object {
        "avatar": "https://robohash.org/quisapientequia.jpg?size=145x145&set=set1",
        "connectionDate": "2008-12-03T01:50:24Z",
        "firstName": "Cacilia",
        "id": 77,
        "lastName": "Ordelt",
        "trustScore": 86.3,
      },
      Object {
        "avatar": "https://robohash.org/voluptatemetaut.bmp?size=145x145&set=set1",
        "connectionDate": "2016-03-04T15:14:08Z",
        "firstName": "Tybalt",
        "id": 78,
        "lastName": "Mair",
        "trustScore": 87.2,
      },
      Object {
        "avatar": "https://robohash.org/adquidemcorrupti.jpg?size=145x145&set=set1",
        "connectionDate": "2015-01-18T13:10:59Z",
        "firstName": "Ruprecht",
        "id": 79,
        "lastName": "Shaxby",
        "trustScore": 74.3,
      },
      Object {
        "avatar": "https://robohash.org/nemoconsequaturest.jpg?size=145x145&set=set1",
        "connectionDate": "2009-11-03T15:11:49Z",
        "firstName": "Hailey",
        "id": 80,
        "lastName": "Fallowfield",
        "trustScore": 90.1,
      },
      Object {
        "avatar": "https://robohash.org/autvoluptasmollitia.jpg?size=145x145&set=set1",
        "connectionDate": "2017-07-17T16:58:28Z",
        "firstName": "Mufi",
        "id": 81,
        "lastName": "McCandie",
        "trustScore": 89.6,
      },
      Object {
        "avatar": "https://robohash.org/corporissintaut.png?size=145x145&set=set1",
        "connectionDate": "2007-11-27T10:00:01Z",
        "firstName": "Tammie",
        "id": 82,
        "lastName": "Dunstone",
        "trustScore": 76.9,
      },
      Object {
        "avatar": "https://robohash.org/fugitquicorporis.bmp?size=145x145&set=set1",
        "connectionDate": "2015-02-24T14:05:41Z",
        "firstName": "Stern",
        "id": 83,
        "lastName": "Rees",
        "trustScore": 81.4,
      },
      Object {
        "avatar": "https://robohash.org/idametiste.png?size=145x145&set=set1",
        "connectionDate": "2011-03-01T16:44:34Z",
        "firstName": "Ilario",
        "id": 84,
        "lastName": "Spon",
        "trustScore": 62.1,
      },
      Object {
        "avatar": "https://robohash.org/sitquiased.png?size=145x145&set=set1",
        "connectionDate": "2017-02-27T14:12:08Z",
        "firstName": "Ivar",
        "id": 85,
        "lastName": "Phlipon",
        "trustScore": 71.5,
      },
      Object {
        "avatar": "https://robohash.org/aliquidsaepecommodi.jpg?size=145x145&set=set1",
        "connectionDate": "2012-02-15T23:59:03Z",
        "firstName": "Jaclyn",
        "id": 86,
        "lastName": "Kelcher",
        "trustScore": 72.9,
      },
      Object {
        "avatar": "https://robohash.org/voluptatemvoluptatessimilique.bmp?size=145x145&set=set1",
        "connectionDate": "2010-11-14T17:35:33Z",
        "firstName": "Thorvald",
        "id": 87,
        "lastName": "Rebillard",
        "trustScore": 66.5,
      },
      Object {
        "avatar": "https://robohash.org/eumvelitbeatae.png?size=145x145&set=set1",
        "connectionDate": "2016-12-25T08:46:38Z",
        "firstName": "Ara",
        "id": 88,
        "lastName": "Buchanan",
        "trustScore": 66.7,
      },
      Object {
        "avatar": "https://robohash.org/omnisvoluptatemiusto.png?size=145x145&set=set1",
        "connectionDate": "2008-12-13T01:28:00Z",
        "firstName": "Charo",
        "id": 89,
        "lastName": "Kingston",
        "trustScore": 90.9,
      },
      Object {
        "avatar": "https://robohash.org/fugitmagnamnisi.png?size=145x145&set=set1",
        "connectionDate": "2011-01-01T16:50:12Z",
        "firstName": "Niel",
        "id": 90,
        "lastName": "Dulinty",
        "trustScore": 98.1,
      },
      Object {
        "avatar": "https://robohash.org/veniamidautem.png?size=145x145&set=set1",
        "connectionDate": "2017-08-06T11:03:12Z",
        "firstName": "Carlee",
        "id": 91,
        "lastName": "Van der Merwe",
        "trustScore": 60.4,
      },
      Object {
        "avatar": "https://robohash.org/sintdoloresculpa.bmp?size=145x145&set=set1",
        "connectionDate": "2017-03-17T16:24:58Z",
        "firstName": "Eloise",
        "id": 92,
        "lastName": "Noriega",
        "trustScore": 76.9,
      },
      Object {
        "avatar": "https://robohash.org/liberoducimusab.bmp?size=145x145&set=set1",
        "connectionDate": "2012-04-07T09:01:40Z",
        "firstName": "Fabien",
        "id": 93,
        "lastName": "Harron",
        "trustScore": 71,
      },
      Object {
        "avatar": "https://robohash.org/totamlaborummolestias.bmp?size=145x145&set=set1",
        "connectionDate": "2008-05-04T02:26:43Z",
        "firstName": "Denny",
        "id": 94,
        "lastName": "Furmedge",
        "trustScore": 91.6,
      },
      Object {
        "avatar": "https://robohash.org/aperiametadipisci.bmp?size=145x145&set=set1",
        "connectionDate": "2009-06-15T06:56:13Z",
        "firstName": "Jessey",
        "id": 95,
        "lastName": "Maciejak",
        "trustScore": 65.2,
      },
      Object {
        "avatar": "https://robohash.org/cupiditateeosblanditiis.bmp?size=145x145&set=set1",
        "connectionDate": "2012-05-27T02:57:28Z",
        "firstName": "Shannon",
        "id": 96,
        "lastName": "Daal",
        "trustScore": 94.2,
      },
      Object {
        "avatar": "https://robohash.org/nequevelperspiciatis.png?size=145x145&set=set1",
        "connectionDate": "2014-05-17T15:16:55Z",
        "firstName": "Tina",
        "id": 97,
        "lastName": "Jarmyn",
        "trustScore": 87.5,
      },
      Object {
        "avatar": "https://robohash.org/quisautsint.png?size=145x145&set=set1",
        "connectionDate": "2007-07-04T21:40:27Z",
        "firstName": "Jamesy",
        "id": 98,
        "lastName": "Brear",
        "trustScore": 66.9,
      },
      Object {
        "avatar": "https://robohash.org/asperioresculpaqui.bmp?size=145x145&set=set1",
        "connectionDate": "2010-05-05T18:54:46Z",
        "firstName": "Kristina",
        "id": 99,
        "lastName": "Sabben",
        "trustScore": 68.2,
      },
      Object {
        "avatar": "https://robohash.org/suscipitdistinctioperspiciatis.bmp?size=145x145&set=set1",
        "connectionDate": "2012-03-31T07:44:21Z",
        "firstName": "Cirilo",
        "id": 100,
        "lastName": "O'Towey",
        "trustScore": 93.9,
      },
    ],
    "type": "UPDATE_CONNECTIONS",
  },
]
`;
